--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Michael Brilka</a><sup>*</sup>,</span>
+                <a Michael Brilka</a><sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Kristof Van Laerhoven</a><sup>*</sup>,</span>
                   
@@ -167,7 +167,7 @@ To evaluate ChronoVault we performed a user study. In it, participants were task
 					
 				</br>
 					<div class="columns is-centered has-text-left"> 
-						<image is-centered loop muted width="80%" height="auto" src="static/images/schematic.jpg"></video>
+						<image is-centered loop muted width="30%" height="auto" src="static/images/schematic.jpg"></video>
 					</div> 
 				</div> 
 			</div> 
