--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a >Michael Brilka</a><sup>*</sup>,</span>
+                Michael Brilka<sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Kristof Van Laerhoven</a><sup>*</sup>,</span>
                   
